--- a/docs/_posts/1871-05-10-Louis-Rau.md
+++ b/docs/_posts/1871-05-10-Louis-Rau.md
@@ -8,29 +8,29 @@ destination: 'Munich'
 ---
 
 
-Mein Lieber Alle,
+Meine Lieben Alle,
 
 Umstehenden Bf von Guillier habe geöffnet
 weil ich fürchtete, er sei nicht nahe in Paris. Einst...ende
-... er heute nacht gut für nur h..nden in Paris uns. die
-Communter haben eine grosse Angst & sie glauben ich
-bis Montag in Paris zu sein. Hoffentlich werden dem
-alle Lalt von nur Alle bald ..sch..den
+scheint er heute recht gut für uns suchen in Paris uns. die
+Communter haben eine grosse Angst & so glaube ich
+bis Montag in Paris zu sein. Hoffentlich werden denen
+alle .alt von uns Allen bald verabschieden.
 
 Ich bin gestern Abend hier angekommen,
-... ich wiedereinmal in Köln sehen geblieben bin
-Nicht Runbeobend in der Eisenbechen must mit den Hotels
-Associat sein, kommt z ist morgen früh von München mag
-& trifft Freitag Abend hier sein.
+nachdem ich wieder einmal in Köln sitzen geblieben bin
+Nicht Kunb... in der Eisenbahn muß mit den Hotels
+Associat sein, kommt z ist morgen früh von München weg
+& trifft Freitag Abend hier ein.
 
-Lnz St bald etner von Euch und den
-Reinden sein; wann werde ich Sie wiedersehen!?
+Laszt bald etwas von Euch und den
+Kindern hören; wann werde ich Sie wiedersehen!?
 
-Schauen Grüß an Euren liebe Mutter & Geschwestern
+Schönen Grüß an Eure liebe Mutter & Geschwister
 
 
 
-von Eurer Ludwig
+von Eurem Ludwig
 
 
 
