--- a/docs/_posts/1871-05-10-Louis-Rau.md
+++ b/docs/_posts/1871-05-10-Louis-Rau.md
@@ -12,15 +12,15 @@ Meine Lieben Alle,
 
 Umstehenden Bf von Guillier habe geöffnet
 weil ich fürchtete, er sei nicht nahe in Paris. Einst...ende
-scheint er heute recht gut für uns suchen in Paris uns; die
-Communter haben eine grosse Angst & so glaube ich
-bis Montag in Paris zu sein. Hoffentlich werden denen
-alle .alt von uns Allen bald verabschieden.
+scheint er heute recht gut für uns Juden in Paris aus; die
+Commenenten haben eine grosse Angst & so glaube ich
+bis Montag in Paris zu sein. Hoffentlich werden dann
+alle .alt von uns Allen bald verschwinden.
 
 Ich bin gestern Abend hier angekommen,
 nachdem ich wieder einmal in Köln sitzen geblieben bin
 Nicht Kunb... in der Eisenbahn muß mit den Hotels
-Associat sein, kommt z ist morgen früh von München weg
+Associat sein. Kuntz ist morgen früh von München weg
 & trifft Freitag Abend hier ein.
 
 Laszt bald etwas von Euch und den
