--- a/docs/_posts/1871-05-10-Louis-Rau.md
+++ b/docs/_posts/1871-05-10-Louis-Rau.md
@@ -3,10 +3,9 @@ last_modified_at: 2021-04-03
 full_year: true
 layout: post
 place: Brussel
-author: Louis Rau
-recipient: 'Adolphe Grünberg'
 destination: 'Munich'
-lang: german
+lang: 'german'
+scan_image: '1871-05-10_Brussels_Ludwig_Rau.jpg'
 ---
 
 
@@ -34,6 +33,3 @@ Schönen Grüß an Eure liebe Mutter & Geschwister
 
 von Eurem Ludwig
 
-----
-
-[![Letter]({{ "assets/images/lettres/1871-05-10_Brussels_Ludwig_Rau.jpg" | relative_url }})]({{ "assets/images/lettres/1871-05-10_Brussels_Ludwig_Rau.jpg" | relative_url }})
