--- a/docs/_posts/1871-05-10-Louis-Rau.md
+++ b/docs/_posts/1871-05-10-Louis-Rau.md
@@ -25,7 +25,7 @@ Associat sein. Kuntz ist morgen früh von München weg
 & trifft Freitag Abend hier ein.
 
 Laszt bald etwas von Euch und den
-Kindern hören; wann werde ich Sie wiedersehen!?
+Kindern hören; wann werde ich sie wiedersehen!?
 
 Schönen Grüß an Eure liebe Mutter & Geschwister
 
