--- a/docs/_posts/1871-05-10-Louis-Rau.md
+++ b/docs/_posts/1871-05-10-Louis-Rau.md
@@ -6,6 +6,9 @@ place: Brussel
 destination: 'Munich'
 lang: 'german'
 scan_image: '1871-05-10_Brussels_Ludwig_Rau.jpg'
+thanks: |
+  Merci à [Helga Koch](https://twitter.com/Damitwasbleibt) pour
+  son aide précieuse à la transcription de cette lettre!
 ---
 
 
