--- a/docs/_posts/1871-05-10-Louis-Rau.md
+++ b/docs/_posts/1871-05-10-Louis-Rau.md
@@ -6,6 +6,7 @@ place: Brussel
 destination: 'Munich'
 lang: 'german'
 scan_image: '1871-05-10_Brussels_Ludwig_Rau.jpg'
+note: (Au dos de [la lettre des 4 et 5 Mai 1871](/1871/05/05/Louis-Guillier.html))
 thanks: |
   Merci à [Helga Koch](https://twitter.com/Damitwasbleibt) pour
   son aide précieuse à la transcription de cette lettre!
@@ -15,11 +16,11 @@ thanks: |
 Meine Lieben Alle,
 
 Umstehenden Bf von Guillier habe geöffnet
-weil ich fürchtete, er sei nicht nahe in Paris. Einst...ende
-scheint er heute recht gut für uns Juden in Paris aus; die
+weil ich fürchtete, es sei nicht nahe in Paris. Einstweilen
+schaut es heute recht gut für uns Juden in Paris aus; die
 Commenenten haben eine grosse Angst & so glaube ich
 bis Montag in Paris zu sein. Hoffentlich werden dann
-alle .alt von uns Allen bald verschwinden.
+alle dort(?) von uns Allen bald verschwinden.
 
 Ich bin gestern Abend hier angekommen,
 nachdem ich wieder einmal in Köln sitzen geblieben bin
