--- a/docs/_posts/1871-05-10-Louis-Rau.md
+++ b/docs/_posts/1871-05-10-Louis-Rau.md
@@ -4,7 +4,7 @@ full_year: true
 layout: post
 place: Brussel
 destination: 'Munich'
-lang: 'german'
+lang: 'de'
 scan_image: '1871-05-10_Brussels_Ludwig_Rau.jpg'
 note: (Au dos de [la lettre des 4 et 5 Mai 1871](/1871/05/05/Louis-Guillier.html))
 thanks: |
@@ -15,17 +15,17 @@ thanks: |
 
 Meine Lieben Alle,
 
-Umstehenden Bf von Guillier habe geöffnet
-weil ich fürchtete, es sei nicht nahe in Paris. Einstweilen
-schaut es heute recht gut für uns Juden in Paris aus; die
-Commenenten haben eine grosse Angst & so glaube ich
-bis Montag in Paris zu sein. Hoffentlich werden dann
+Umstehenden Bf von <span data-lang="fr">Guillier</span> habe geöffnet
+weil ich fürchtete, es sei nicht nahe in <span data-lang="fr">Paris</span>. Einstweilen
+schaut es heute recht gut für uns Juden in <span data-lang="fr">Paris</span> aus; die
+<span data-lang="fr">Communten</span> haben eine grosse Angst & so glaube ich
+bis Montag in <span data-lang="fr">Paris</span> zu sein. Hoffentlich werden dann
 alle dort(?) von uns Allen bald verschwinden.
 
 Ich bin gestern Abend hier angekommen,
 nachdem ich wieder einmal in Köln sitzen geblieben bin
-Nicht Kunb... in der Eisenbahn muß mit den Hotels
-Associat sein. Kuntz ist morgen früh von München weg
+Nicht Kunb... in der Eisenbahn muß mit den <span data-lang="fr">Hotels
+Associat</span> sein. Kuntz ist morgen früh von München weg
 & trifft Freitag Abend hier ein.
 
 Laszt bald etwas von Euch und den
