--- a/docs/_posts/1871-05-10-Louis-Rau.md
+++ b/docs/_posts/1871-05-10-Louis-Rau.md
@@ -25,7 +25,7 @@ alle dort(?) von uns Allen bald verschwinden.
 Ich bin gestern Abend hier angekommen,
 nachdem ich wieder einmal in Köln sitzen geblieben bin
 Nicht Kunb... in der Eisenbahn muß mit den <span data-lang="fr">Hotels
-Associat</span> sein. Kuntz ist morgen früh von München weg
+Associat</span> sein. <span data-lang="fr">Kuntz</span> ist morgen früh von München weg
 & trifft Freitag Abend hier ein.
 
 Laszt bald etwas von Euch und den
