--- a/docs/_posts/1871-05-10-Louis-Rau.md
+++ b/docs/_posts/1871-05-10-Louis-Rau.md
@@ -1,10 +1,11 @@
 ---
-last_modified_at: 2021-04-03
+last_modified_at: 2021-04-06
 full_year: true
 layout: post
 place: Brussel
 destination: 'Munich'
 lang: 'de'
+signature: 'von Eurem Ludwig'
 scan_image: '1871-05-10_Brussels_Ludwig_Rau.jpg'
 note: (Au dos de [la lettre des 4 et 5 Mai 1871](/1871/05/05/Louis-Guillier.html))
 thanks: |
@@ -35,5 +36,4 @@ Schönen Grüß an Eure liebe Mutter & Geschwister
 
 
 
-von Eurem Ludwig
 
