--- a/docs/_posts/1871-05-10-Louis-Rau.md
+++ b/docs/_posts/1871-05-10-Louis-Rau.md
@@ -17,7 +17,7 @@ thanks: |
 Meine Lieben Alle,
 
 Umstehenden Bf von <span data-lang="fr">Guillier</span> habe geöffnet
-weil ich fürchtete, es sei nicht nahe in <span data-lang="fr">Paris</span>. Einstweilen
+weil ich fürchtete, es sei nicht <abbr title="ou 'wieso'?">nahe</abbr> in <span data-lang="fr">Paris</span>. Einstweilen
 schaut es heute recht gut für uns Juden in <span data-lang="fr">Paris</span> aus; die
 <span data-lang="fr">Communten</span> haben eine grosse Angst & so glaube ich
 bis Montag in <span data-lang="fr">Paris</span> zu sein. Hoffentlich werden dann
