--- a/docs/_posts/1871-05-19-Louis-Rau.md
+++ b/docs/_posts/1871-05-19-Louis-Rau.md
@@ -10,7 +10,7 @@ scan_image: '1871-05-19_Brussels_Ludwig_Rau.jpg'
 note: (Au dos de [la lettre des 16 et 17 Mai 1871](/1871/05/17/Louis-Guillier.html))
 ---
 
-Meine Hauern,
+Meine Theuren(?),
 
 Beifolgend 2 Bf von
 <span data-lang="fr">Guillier</span>; es ist schauderschrift mi. es
@@ -21,10 +21,10 @@ Einstweilen kann ich mich sie
 wie wenig beschaufliegen, und
 denke ich d?dung wenige an unse
 <span data-lang="fr">Schlamassel</span> : — Wir sehen Euen
-guten Neqrenschen(?) betreffs Landerhaus
-& Kohlbe finden anzeigen. — <span data-lang="fr">Hugos</span>
+guten Negrenschen(?) betreffs Landerhaus
+& Wohldbefinden entzogen. — <span data-lang="fr">Hugos</span>
 gehen heute Abend ans <span data-lang="fr">Chatou</span> weil
-sie es hier nicht wese ansfalten
+sie es hier nicht mehr ansfalten
 können.
 
 <span data-lang="fr">Kunst</span> wohl & grüßt
