--- a/docs/_posts/1871-05-19-Louis-Rau.md
+++ b/docs/_posts/1871-05-19-Louis-Rau.md
@@ -3,7 +3,7 @@ last_modified_at: 2021-04-07
 full_year: true
 author: Louis Rau
 layout: post
-place: Brŭssel
+place: Brussel
 lang: 'de'
 signature: 'Eure Ludwig'
 scan_image: '1871-05-19_Brussels_Ludwig_Rau.jpg'
