--- a/docs/_posts/1871-05-19-Louis-Rau.md
+++ b/docs/_posts/1871-05-19-Louis-Rau.md
@@ -13,7 +13,7 @@ note: (Au dos de [la lettre des 16 et 17 Mai 1871](/1871/05/17/Louis-Guillier.h
 Meine Theuren(?),
 
 Beifolgend 2 Bf von
-<span data-lang="fr">Guillier</span>; es ist schauderschrift mi. es
+<span data-lang="fr">Guillier</span>; es ist schauderschrift mir es
 in <span data-lang="fr">Paris</span> ausschaut & man weis
 gar nicht wan das reden wird.
 
