--- a/docs/_posts/1871-05-19-Louis-Rau.md
+++ b/docs/_posts/1871-05-19-Louis-Rau.md
@@ -21,7 +21,7 @@ Einstweilen kann ich mich sie
 wie wenig beschaufliegen, und
 denke ich d?dung wenige an unse
 <span data-lang="fr">Schlamassel</span> : — Wir sehen Euen
-guten Negrenschen(?) betreffs Landerhaus
+guten Negrenschen betreffs Landerhaus
 & Wohldbefinden entzogen. — <span data-lang="fr">Hugos</span>
 gehen heute Abend ans <span data-lang="fr">Chatou</span> weil
 sie es hier nicht mehr ansfalten
