--- a/docs/_posts/1871-05-19-Louis-Rau.md
+++ b/docs/_posts/1871-05-19-Louis-Rau.md
@@ -10,7 +10,7 @@ scan_image: '1871-05-19_Brussels_Ludwig_Rau.jpg'
 note: (Au dos de [la lettre des 16 et 17 Mai 1871](/1871/05/17/Louis-Guillier.html))
 ---
 
-Meine Theuren(?),
+Meine Theuren,
 
 Beifolgend 2 Bf von
 <span data-lang="fr">Guillier</span>; es ist schauderschrift mir es
