attempt to decipher German

--- a/docs/_posts/1871-06-04-Louis-Rau.md
+++ b/docs/_posts/1871-06-04-Louis-Rau.md
@@ -4,7 +4,28 @@ note: (Au dos de [la lettre du 1<sup>er</sup> Juin 1871](/1871/06/01/Clara-Guill
 layout: post
 lang: 'de'
 scan_image: '1871-06-04_Ludwig_Rau.jpg'
+signature: 'Euer ...'
 post_scriptum: |
+  Mon petit petit rien dans le bon vieux temps dinet
+  pr aus Paris _mit_{:.straight}{:data-lang="de"} bagage.
+  {:data-lang="fr"}
 ---
 
-Mein Theuer
+Mein Theuer 4 ...
+
+Eine  ... .. .. .. Ludwig. .. Laufen
+aus
+sofar <span data-lang="fr">terrifiée</span>, Kuntz, et ...
+fralten,     Wau wau gehabe getan.
+Ich gehe morgen nach Paris.
+Ludwig sagt ...:
+
+<span data-lang="fr">Rue Royale</span> hatt greuansaft aus
+ich glaube etwas Rail gebleibt
+resilient und klein, und ...
+... ... kommen, 
+isen.—
+
+ce que je viens de faire.
+{:data-lang="fr"}
+
