--- a/docs/_posts/1871-06-01-Inconnu.md
+++ b/docs/_posts/1871-06-01-Inconnu.md
@@ -1,6 +1,6 @@
 ---
 last_modified_at: 2021-04-15
-note: (Au dos de [la lettre du 1<sup>er</sup> Juin 1871](/1871/06/01/Clara-Guillier.html))
+note: (Au dos de [la lettre du 1<sup>er</sup> Juin 1871](/1871/06/01/Clara-Guillier.html). L'auteur semble identique à celui de la note du [28 Mai 1871](/1871/05/28/Louis-Guillier.html))
 layout: post
 lang: 'de'
 scan_image: '1871-06-04_Ludwig_Rau.jpg'
