First try on Louis Rau 1871-05-19
Line 24 is a very tough one. I’ll have to come back there later.

--- a/docs/_posts/1871-05-19-Louis-Rau.md
+++ b/docs/_posts/1871-05-19-Louis-Rau.md
@@ -5,7 +5,7 @@ author: Louis Rau
 layout: post
 place: Brussel
 lang: 'de'
-signature: 'Eure Ludwig'
+signature: 'Euren Ludwig'
 scan_image: '1871-05-19_Brussels_Ludwig_Rau.jpg'
 note: (Au dos de [la lettre des 16 et 17 Mai 1871](/1871/05/17/Louis-Guillier.html))
 ---
@@ -13,19 +13,19 @@ note: (Au dos de [la lettre des 16 et 17 Mai 1871](/1871/05/17/Louis-Guillier.h
 Meine Theuren,
 
 Beifolgend 2 Bf von
-<span data-lang="fr">Guillier</span>; es ist schauderschrift mir es
+<span data-lang="fr">Guillier</span>; es ist schauderhaft wie es
 in <span data-lang="fr">Paris</span> ausschaut & man weis
-gar nicht wan das reden wird.
+gar nicht wan̄ das enden wird.
 
-Einstweilen kann ich mich sie
-wie wenig beschaufliegen, und
-denke ich d?dung wenige an unse
-<span data-lang="fr">Schlamassel</span> : — Wir sehen Euen
+Einstweilen kann ich mich hier
+nur wenig beschäftigen, und
+denke ich dadurch weniger an unser
+<span data-lang="fr">Schlamassel</span> : — Wir sehnen Euren
 guten Negrenschen betreffs Landerhaus
-& Wohldbefinden entzogen. — <span data-lang="fr">Hugos</span>
-gehen heute Abend ans <span data-lang="fr">Chatou</span> weil
-sie es hier nicht mehr ansfalten
+& Wohlbefinden entgegen. — <span data-lang="fr">Hugos</span>
+gehen heute Abend nach <span data-lang="fr">Chatou</span> weil
+sie es hier nicht mehr aushalten
 können.
 
-<span data-lang="fr">Kunst</span> wohl & grüßt
+Kennt wohl & grüßt
 mit mir
