--- a/docs/_posts/1871-05-10-Louis-Rau.md
+++ b/docs/_posts/1871-05-10-Louis-Rau.md
@@ -20,17 +20,17 @@ Meine Lieben Alle,
 Umstehenden Bf von <span data-lang="fr">Guillier</span> habe geöffnet
 weil ich fürchtete, es sei nicht <abbr title="ou 'wieso'?">nahe</abbr> in <span data-lang="fr">Paris</span>. Einstweilen
 schaut es heute recht gut für uns Juden in <span data-lang="fr">Paris</span> aus; die
-<span data-lang="fr">Communten</span> haben eine grosse Angst & so glaube ich
+<span data-lang="fr">Communi[s]ten</span> haben eine grosse Angst & so glaube ich
 bis Montag in <span data-lang="fr">Paris</span> zu sein. Hoffentlich werden dann
-alle dort(?) von uns Allen bald verschwinden.
+alle Zores von uns Allen bald verschwinden.
 
 Ich bin gestern Abend hier angekommen,
 nachdem ich wieder einmal in Köln sitzen geblieben bin
-Nicht Kunb... in der Eisenbahn muß mit den <span data-lang="fr">Hotels
+Diese Räuberbande in der Eisenbahn muß mit den <span data-lang="fr">Hotels
 Associat</span> sein. <span data-lang="fr">Kuntz</span> ist morgen früh von München weg
 & trifft Freitag Abend hier ein.
 
-Laszt bald etwas von Euch und den
+Laßt bald etwas von Euch und den
 Kindern hören; wann werde ich sie wiedersehen!?
 
 Schönen Grüß an Eure liebe Mutter & Geschwister
